Fixed styling, and initial placement of pieces so that they don't overlap

--- a/src/components/board/styles.css
+++ b/src/components/board/styles.css
@@ -8,6 +8,10 @@
 
 .board-wrapper {
   height: 700px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .board-row {
