--- a/src/components/pieces/styles.css
+++ b/src/components/pieces/styles.css
@@ -1,7 +1,7 @@
 .pieces-container {
   display: flex;
   position: relative;
-  width: 500px;
+  width: 2000px;
   height: 300px;
 }
 
